--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
     <link rel="stylesheet" href="style.css">
     <script type="module" src="script.js" defer></script>
     <script type="module" src="script-3d.js"> </script>
+    <script src="https://kit.fontawesome.com/3fc929cc8b.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-    <div id='main-container'>
+    <div id='main-container' class="puff-in-center">
         <div id="main-home-container" class='basic'>
             <div id="home-text">
-                <h1 id="text1">Select a location to display</h2> 
-                <h2 id="text2">weather data!</h2>
+                <h1 id="text1">Welcome to the Weather App!</h2> 
+                <h2 id="text2">Search location</h2>
                 
                   <form id="search-form"><input type="text" id="search-input" placeholder="Select Location"><button id="magnifying-glass"></button></form>
                 
             </div>
         </div>
+        <div id="loading-screen"> <div id="spinner-cog" class="fas fa-cog"></div><div id="loading-data-text"><em>loading data...</em></div></div>
         <div id='details-container' class='basic'>
           <div id="selected-day">
             <div >
               <div>
                 <h1 class="spacer" id="location-container"> 
-                  <button id="back-btn"><div id="back-btn-content"></div></button>
                   <span id="location" >Location Name</span> 
+                  <div id="back-btn" class="far fa-times-circle scale-down-center"></div>
                   </h1>
                 </div>
             </div>
@@ -41,7 +43,6 @@
           <div id="day-selection" class="spacer">
           </div>
         </div>
-        <div id="circle" class="circle-home"></div>
     </div>
    
 </body>
