--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
@@ -15,19 +17,19 @@
 
 <body>
   <div id="drops">
-    <div  class="drops-props fas fa-tint"></div>
-    <div  class="drops-props fas fa-tint"></div>
-    <div  class="drops-props fas fa-tint"></div>
-    <div  class="drops-props fas fa-tint"></div>
-    <div  class="drops-props fas fa-tint"></div>
-    <div  class="drops-props fas fa-tint"></div>
-    <div  class="drops-props fas fa-tint"></div>
+    <div  class="drops-props"><div></div></div>
+    <div  class="drops-props"><div></div></div>
+    <div  class="drops-props"><div></div></div>
+    <div  class="drops-props"><div></div></div>
+    <div  class="drops-props"><div></div></div>
+    <div  class="drops-props"><div></div></div>
+    <div  class="drops-props"><div></div></div>
   </div>
     <div id='main-container' class="fade-in">
         <div id="main-home-container" class='basic'>
             <div id="home-text">
                 <h1 id="text1">Welcome to the Weather App!</h2> 
-                <h2 id="text2">Search location</h2>
+                <h2 id="text2">Search location to check weather</h2>
                 
                   <form id="search-form"><input type="text" id="search-input" placeholder="Select Location"><button id="magnifying-glass" class="fas fa-search"></button></form>
                 
@@ -57,7 +59,8 @@
           </div>
         </div>
         <div id="stats-container" class="fade-in">
-          <div>Statistic data for location</div>
+          <h2>Statistic data for location</h2>
+          <div><em>in development...</em></div>
         </div>
     </div>
    
